k8s/asrevo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      run: auth
  replicas: 1
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
      - name: auth
        image: ashraf1abdelrasool/auth:0.0.1-SNAPSHOT
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: auth
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9999
  type: LoadBalancer
  selector:
    run: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tube
spec:
  selector:
    matchLabels:
      run: tube
  replicas: 1
  template:
    metadata:
      labels:
        run: tube
    spec:
      containers:
      - name: tube
        image: ashraf1abdelrasool/tube:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tube
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: tube
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
  type: LoadBalancer
  selector:
    run: tube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file
spec:
  selector:
    matchLabels:
      run: file
  replicas: 1
  template:
    metadata:
      labels:
        run: file
    spec:
      containers:
      - name: tube
        image: ashraf1abdelrasool/file:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: file
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: file
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8082
  type: LoadBalancer
  selector:
    run: file
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: ashraf1abdelrasool/gateway:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    run: gateway
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 35.222.24.177
  selector:
    run: gateway
