k8s/services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      run: auth
  replicas: 1
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
      - name: auth
        image: ashraf1abdelrasool/auth:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    run: auth
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9999
  type: NodePort
  selector:
    run: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tube
spec:
  selector:
    matchLabels:
      run: tube
  replicas: 1
  template:
    metadata:
      labels:
        run: tube
    spec:
      containers:
      - name: tube
        image: ashraf1abdelrasool/tube:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: tube
  labels:
    run: tube
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
  type: NodePort
  selector:
    run: tube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: ashraf1abdelrasool/gateway:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    run: gateway
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 35.238.48.181
  selector:
    run: gateway
