k8s/service-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: gateway
          servicePort: 80
      - path: /tube/?(.*)
        backend:
          serviceName: tube
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "JSESSIONID"
spec:
  rules:
  - http:
      paths:
      - path: /auth/?(.*)
        backend:
          serviceName: auth
          servicePort: 80
