k8s/tmp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      run: auth
  replicas: 1
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
      - name: auth
        image: ashraf1abdelrasool/auth:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: auth
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9999
  type: LoadBalancer
  selector:
    run: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      run: ui
  replicas: 1
  template:
    metadata:
      labels:
        run: ui
    spec:
      containers:
      - name: ui
        image: ashraf1abdelrasool/ui:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    run: ui
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
  selector:
    run: ui
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
  - http:
      paths:
      - path: /auth/?(.*)
        backend:
          serviceName: auth
          servicePort: 80
      - path: /?(.*)
        backend:
          serviceName: ui
          servicePort: 80
